fix(feat): make iframes not focusable when user scrolls to avoid weird issues when scrolling on mobile Safari

--- a/client/style.css
+++ b/client/style.css
@@ -84,6 +84,10 @@ body.js-loaded {
   @apply visible;
 }
 
+body.is-scrolling iframe {
+  @apply pointer-events-none;
+}
+
 summary {
   list-style: none;
 }
